fix(about-me): overflow of CodeSnippet component fixed

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -37,6 +37,10 @@
   font-style: normal;
 }
 
+pre {
+  @apply !whitespace-pre-wrap !break-words !overflow-hidden;
+}
+
 body {
   @apply font-custom;
 }
